# educa

./: .gitignore  manage.py  pyproject.toml  ub_appssub_appssub_appssub_appssub_appssub_apps
educa/: api.py  asgi.py  urls.py  wsgi.py
educa/apps/core/: apps.py  middleware.py  models.py  permission.py  permissions.py  schema.py  utils.py  video.py
educa/apps/course/: api.py  api_relation.py  models.py  schema.py
educa/apps/generic/: api.py  decorator.py
educa/apps/lesson/: api.py  api_relation.py  models.py  schema.py
educa/apps/module/: api.py  models.py  schema.py
educa/apps/user/: api.py  apps.py  models.py  schema.py
educa/settings/: _base.py  dev.py  test.py
testing2/: apps.py
tests/: base.py  client.py  conftest.py
tests/auth/: test_api.py  test_token.py
tests/category/: test_api.py
tests/content/: test_api.py
tests/core/: test_permission.py  test_permission_object.py  test_utils.py  test_video.py
tests/course/: test_api.py  test_api_relation.py
tests/course/category/: test_api.py
tests/course/factories/: course.py  message.py  rating.py
tests/course/message/: test_api.py
tests/course/rating/: test_api.py
tests/factories/: category.py  content.py  course.py  lesson.py  message.py  module.py  note.py  question.py  quiz.py  rating.py  user.py
tests/generic/: test_decorator.py
tests/generic/action/: test_api.py
tests/generic/answer/: test_api.py
tests/generic/factories/: action.py  answer.py
tests/lesson/: test_api.py  test_api_relation.py  test_model.py
tests/lesson/content/: test_api.py
tests/lesson/factories/: content.py  lesson.py  note.py  question.py
tests/lesson/note/: test_api.py
tests/lesson/question/: test_api.py
tests/message/: test_api.py
tests/module/: test_api.py
tests/module/factories/: module.py  quiz.py
tests/module/quiz/: test_api.py  test_api_relation.py  test_model.py
tests/note/: test_api.py
tests/question/: test_api.py
tests/quiz/: test_api.py  test_api_relation.py  test_model.py
tests/rating/: test_api.py
tests/user/: test_api.py
tests/user/auth/: test_api.py  test_token.py
udemy/: asgi.py  urls.py  wsgi.py
udemy/apps/core/: models.py
udemy/apps/course/: apps.py  models.py
udemy/settings/: _base.py  dev.py  test.py
(+121 files in other folders)
